--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>kribibeach</title>
     
   </head>
-
+ <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
   <body>
     <div id="root"></div>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
